Api test/update

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGODB_URL = "mongodb+srv://himanshusingh:ghnpTg2Cgiy0brqv@cluster0.fyon1jv.mongodb.net/?retryWrites=true&w=majority"
+MONGODB_URL = "mongodb+srv://himanshusingh:ghnpTg2Cgiy0brqv@cluster0.fyon1jv.mongodb.net/Nide?retryWrites=true&w=majority"
