added functionality to product api

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 MONGODB_URL = "mongodb+srv://himanshusingh:ghnpTg2Cgiy0brqv@cluster0.fyon1jv.mongodb.net/Nide?retryWrites=true&w=majority"
+
+# mongodb://himanshusingh:@main-shard-00-00-03xkr.mongodb.net:27017,main-shard-00-01-03xkr.mongodb.net:27017,main-shard-00-02-03xkr.mongodb.net:27017/main?ssl=true&replicaSet=Main-shard-0&authSource=admin&retryWrites=true
