Issues in authentication

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGODB_URL = "mongodb+srv://himanshusingh:ghnpTg2Cgiy0brqv@cluster0.fyon1jv.mongodb.net/Nide?retryWrites=true&w=majority"
+JWT_SECRET = "nideeeee"
