--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.1.2",
+    "nodemon": "^3.1.0",
     "uuid": "^9.0.1"
   }
 }
